test/semantic_errors/invalid_unaryop4.mc
void main() {
    char a;
    bool c;
    c = !a; /* cannot negate char */
}